--- a/app/news/[id]/newspage.css
+++ b/app/news/[id]/newspage.css
@@ -1,7 +1,6 @@
 .card {
-    background: linear-gradient(135deg, #ffffff, #f7fcfc, #ffffff, #f7fcfc, #ffffff, #ffffff);
+    background: #ffffff;
     border-radius: 15px;
-    box-shadow: 2px 2px 9px #e4e1e1, -3px -3px 5px #ffffff;
     position: flex;
   }
   
